test/runnable/infer-type-args-from-lambda-explicit-type.crow
import
	crow/io/print: out, print

main nat^(_ string[]) summon
	a = () sum-by (x nat) => x
	b = ("foo", "bar") sum-by (s symbol) => s.to::string.size
	out print "a: {a}, b: {b}"
	()

sum-by[t] nat(a t[], f act nat(t))
	res mut = 0
	for x : a
		res +:= f[x]
	res
