test/compile-errors/unused.crow
foo[t] void(p nat, _ string)
	_ act void(nat) = x => ()
	_ act void(nat) = _ => ()
	()

-bar[t] void() t compare
	()

-r record mut
	-r0 .mut nat

-u union
	u0 nat

-a alias
	nat

-e enum
	e0

-f flags
	f0
